# doctor_dev

./: .env.example  .gitignore  CHANGELOG_PHASES.md  PHASE2_BALANCER_ENDPOINT_UI_FIX.md  PHASE2_CORE_COLLAPSIBLE_CARDS_FIX.md  PHASE2_NODE_DEPENDENCY_SYNC_FIX.md  PHASE2_PATH_OPEN_ALL_FIX.md  PHASE2_PEER_TOKEN_UPDATE_INTERVAL_FIX.md  PHASE2_PY39_COMPAT_FIX.md  PHASE2_RANDOM_INBOUND_FIX.md  PHASE2_REMOTE_RANDOM_PEER_PORT_FIX.md  PHASE2_UI_TEXT_POLISH.md  PROJECT_STRUCTURE.md  README.md  RUN_THREE_SERVERS.md  debug.txt  howtouse.md  install-services.sh  install-windows.ps1  main.py  merge_folder.py  merged_codes.txt  node.env.example  pyproject.toml  requirements.txt  run-local-windows.ps1
configs/: gateway-node.env  gateway-node.json  iran-node.env  iran-node.json
docs/: ARCHITECTURE.md  CONSISTENCY_AUDIT.md  DEPENDENCY_PEER_SYNC.md  LAB_ROUTING_TEST_GUIDE.md  LINUX_MAIN_RUN.md  LOCAL_TEST.md  PEER_REFRESH_FIX.md  PHASE5_SECURITY_AND_STRUCTURE.md  PHASE6_STRUCTURE_CLEANUP.md  PHASE7_8_FINAL_HARDENING.md  PHASE_PLAN.md  QUALITY_AND_CLEANUP.md  RUNTIME_CONTRACT.md  WEB_STATIC_FIX.md
doctor_dev/: ctl.py
doctor_dev.egg-info/: PKG-INFO  SOURCES.txt
doctor_dev_agent/: __main__.py  app.py  cli.py  echo_server.py  settings.py  tunnel_engine.py
doctor_dev_node/: __init__.py  env_loader.py  logging_utils.py  peer_tokens.py  runtime.py  server.py
doctor_dev_panel/: __init__.py  __main__.py  admin_cli.py  admin_store.py  agent_client.py  api_errors.py  app.py  auth.py  cli.py  config.py  core_store.py  deps.py  env_loader.py  id_utils.py  integrity.py  local_test.py  logging_utils.py  node_runtime_cache.py  node_store.py  peer_tokens.py  schemas.py  security.py  settings.py  store.py  ui.py
doctor_dev_phase3.egg-info/: PKG-INFO  SOURCES.txt
doctor_dev_phase7.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
doctor_dev_shared/: certificates.py  config_builder.py  models.py
env.examples/: lab-node-a.env  lab-node-b.env  (+3 more)
v3/: PYTHON39_NOTES.md  RUN_THREE_SERVERS.md  pyproject.toml  requirements.txt
v3/doctor_dev/: ctl.py  main.py
v3/doctor_dev.egg-info/: entry_points.txt  top_level.txt
v3/doctor_dev/config/: __init__.py  storage.py
v3/doctor_dev/forwarding/: __init__.py  group.py  port_allocator.py  tunnel.py
v3/doctor_dev/manager/: core.py  rest_api.py
v3/doctor_dev/models/: config.py  runtime.py
v3/doctor_dev/utils/: logging.py
v3/scripts/: start-background.sh  stop-background.sh
(+153 files in other folders)
